--- a/client/frontend/src/style.css
+++ b/client/frontend/src/style.css
@@ -1,26 +1,20 @@
-html {
-    background-color: rgba(27, 38, 54, 1);
-    text-align: center;
-    color: white;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-    margin: 0;
-    color: white;
-    font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    @apply bg-gray-900 text-white font-sans;
+    overflow: hidden;
 }
 
-@font-face {
-    font-family: "Nunito";
-    font-style: normal;
-    font-weight: 400;
-    src: local(""),
-    url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
-}
-
-#app {
+#root {
     height: 100vh;
-    text-align: center;
+    width: 100vw;
 }
+
+@layer base {
+    body {
+      background-color: #1e1e24; /* Тёмный фон */
+      color: white; /* Белый текст по умолчанию */
+    }
+  }
